--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
   - type: web
-    name: youtube-downloader
+    name: yt-downloader
     env: node
-    buildCommand: "npm install"
-    startCommand: "node server.js"
-    plan: free
+    buildCommand: |
+      apt-get update && apt-get install -y python3-pip ffmpeg
+      pip3 install yt-dlp
+      npm install
+    startCommand: node server.js
